fix height of slider on mobile sizes

--- a/wp-content/themes/slsc/css/styles.css
+++ b/wp-content/themes/slsc/css/styles.css
@@ -1223,9 +1223,11 @@ h1, h2, h3, h4, h5, h6 {
     .swiper-slide {
       height: calc(100vh - 71px); } }
 
-@media (min-width: 75em) {
-  .admin-bar .swiper-slide {
-    height: calc(100vh - 71px - 32px); } }
+.admin-bar .swiper-slide {
+  height: 550px; }
+  @media (min-width: 75em) {
+    .admin-bar .swiper-slide {
+      height: calc(100vh - 71px - 32px); } }
 
 .swiper-button-next,
 .swiper-button-prev {
