--- a/wp-content/themes/slsc/pattern-lab/source/_patterns/03-components/00-cms-styles/swiper/_swiper-custom.scss
+++ b/wp-content/themes/slsc/pattern-lab/source/_patterns/03-components/00-cms-styles/swiper/_swiper-custom.scss
@@ -43,6 +43,7 @@
 
 .admin-bar {
   .swiper-slide {
+    height: 550px;
     @include breakpoint($bp-xlarge) {
       height: calc(100vh - 71px - 32px);
     }  
